--- a/Dev-coder-swag/Base.lproj/Main.storyboard
+++ b/Dev-coder-swag/Base.lproj/Main.storyboard
@@ -18,14 +18,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SHOP BY CATEGORY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R2r-bX-9L3">
-                                <rect key="frame" x="10" y="30" width="165" height="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SHOP BY CATEGORY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R2r-bX-9L3">
+                                <rect key="frame" x="10" y="15" width="165" height="24"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleAspectFit" preservesSuperviewLayoutMargins="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="r23-9q-0UA">
-                                <rect key="frame" x="0.0" y="62" width="375" height="541"/>
+                                <rect key="frame" x="0.0" y="47" width="375" height="556"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <viewLayoutGuide key="safeArea" id="Ekb-Zp-lew"/>
                                 <prototypes>
@@ -70,8 +70,8 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="r23-9q-0UA" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="BMT-JR-8C6"/>
+                            <constraint firstItem="R2r-bX-9L3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="L1L-o3-svv"/>
                             <constraint firstItem="R2r-bX-9L3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="P05-IB-2pX"/>
-                            <constraint firstItem="R2r-bX-9L3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="TBs-Mv-04G"/>
                             <constraint firstItem="r23-9q-0UA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cpc-4B-Xe5"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="R2r-bX-9L3" secondAttribute="trailing" symbolic="YES" id="fNr-ze-Sj4"/>
                             <constraint firstItem="r23-9q-0UA" firstAttribute="top" secondItem="R2r-bX-9L3" secondAttribute="bottom" constant="8" id="o0B-vv-ToS"/>
@@ -82,11 +82,112 @@
                     <navigationItem key="navigationItem" title="CODER SWAG" id="FUw-9Q-Dlg"/>
                     <connections>
                         <outlet property="categoryTable" destination="r23-9q-0UA" id="cdb-5S-D1E"/>
+                        <segue destination="EoH-aG-Yf9" kind="show" identifier="ProductsVC" id="LYB-xh-t8S"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="453.60000000000002" y="258.62068965517244"/>
+            <point key="canvasLocation" x="534" y="267"/>
+        </scene>
+        <!--ProductsVC-->
+        <scene sceneID="g83-VO-Pnk">
+            <objects>
+                <viewController id="EoH-aG-Yf9" customClass="ProductsVC" customModule="Dev_coder_swag" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bGU-KK-jFC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PRODUCTS" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eek-t1-m2Z">
+                                <rect key="frame" x="15" y="10" width="89.5" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="89.5" id="4W2-CF-1LD"/>
+                                    <constraint firstAttribute="height" constant="24" id="PTe-jT-efu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GsG-iG-wQs">
+                                <rect key="frame" x="0.0" y="42" width="375" height="561"/>
+                                <color key="backgroundColor" red="0.87284165620803833" green="0.87350624799728394" blue="0.87294465303421021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="42E-3h-B3s">
+                                    <size key="itemSize" width="178" height="265"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductCell" id="bS3-si-OMk" customClass="ProductCell" customModule="Dev_coder_swag" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="178" height="265"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="178" height="265"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="qYi-rZ-uwF">
+                                                    <rect key="frame" x="0.0" y="0.0" width="178" height="178"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="178" id="c0b-Os-rdl"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Devslopes Logo Graphic T-Shirt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tRJ-cN-Q2z">
+                                                    <rect key="frame" x="8" y="184" width="162" height="48"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="48" id="sZj-z7-kUw"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$25" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bRk-hb-Gsw">
+                                                    <rect key="frame" x="8" y="235" width="162" height="19"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.87631672620773315" green="0.87351095676422119" blue="0.8729436993598938" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="qYi-rZ-uwF" secondAttribute="trailing" id="2AA-II-exA"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="bRk-hb-Gsw" secondAttribute="bottom" constant="3" id="BWY-8Z-hKL"/>
+                                            <constraint firstItem="bRk-hb-Gsw" firstAttribute="top" secondItem="tRJ-cN-Q2z" secondAttribute="bottom" constant="3" id="Hh6-KZ-ufG"/>
+                                            <constraint firstItem="bRk-hb-Gsw" firstAttribute="leading" secondItem="bS3-si-OMk" secondAttribute="leadingMargin" id="JZE-ee-QbS"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="bRk-hb-Gsw" secondAttribute="trailing" id="PIZ-0G-3fS"/>
+                                            <constraint firstItem="tRJ-cN-Q2z" firstAttribute="top" secondItem="qYi-rZ-uwF" secondAttribute="bottom" constant="6" id="Sq1-JC-mis"/>
+                                            <constraint firstItem="qYi-rZ-uwF" firstAttribute="top" secondItem="bS3-si-OMk" secondAttribute="top" id="Vl4-95-1sn"/>
+                                            <constraint firstItem="tRJ-cN-Q2z" firstAttribute="leading" secondItem="bS3-si-OMk" secondAttribute="leadingMargin" id="fCS-6I-gmp"/>
+                                            <constraint firstItem="qYi-rZ-uwF" firstAttribute="leading" secondItem="bS3-si-OMk" secondAttribute="leading" id="oEZ-U9-QNj"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="tRJ-cN-Q2z" secondAttribute="trailing" id="tBY-Ap-Y8N"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="productImage" destination="qYi-rZ-uwF" id="pRF-wW-LnW"/>
+                                            <outlet property="productPrice" destination="bRk-hb-Gsw" id="blE-NQ-ld3"/>
+                                            <outlet property="productTitle" destination="tRJ-cN-Q2z" id="r55-Rq-nMA"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.87284165620803833" green="0.87350624799728394" blue="0.87294465303421021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="GsG-iG-wQs" firstAttribute="leading" secondItem="OYb-UL-wsh" secondAttribute="leading" id="4Kk-Rh-lEW"/>
+                            <constraint firstItem="eek-t1-m2Z" firstAttribute="top" secondItem="OYb-UL-wsh" secondAttribute="top" constant="10" id="5Bk-d3-R0d"/>
+                            <constraint firstItem="OYb-UL-wsh" firstAttribute="trailing" secondItem="GsG-iG-wQs" secondAttribute="trailing" id="84S-Db-V4g"/>
+                            <constraint firstItem="OYb-UL-wsh" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="eek-t1-m2Z" secondAttribute="trailing" symbolic="YES" id="Mwe-ZX-DWH"/>
+                            <constraint firstItem="eek-t1-m2Z" firstAttribute="leading" secondItem="OYb-UL-wsh" secondAttribute="leading" constant="15" id="a6D-jI-Si2"/>
+                            <constraint firstItem="OYb-UL-wsh" firstAttribute="bottom" secondItem="GsG-iG-wQs" secondAttribute="bottom" id="brD-JG-yym"/>
+                            <constraint firstItem="GsG-iG-wQs" firstAttribute="top" secondItem="eek-t1-m2Z" secondAttribute="bottom" constant="8" id="dEn-JK-KL9"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="OYb-UL-wsh"/>
+                    </view>
+                    <connections>
+                        <outlet property="productsCollection" destination="GsG-iG-wQs" id="RNg-ar-LYn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aba-gO-luO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1228" y="265.81709145427288"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rWi-jh-4Xq">
@@ -96,6 +197,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="nCj-YM-39U">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.3411764705882353" green="0.15294117647058825" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -113,5 +215,6 @@
     </scenes>
     <resources>
         <image name="digital" width="1024" height="703"/>
+        <image name="shirt01" width="500" height="500"/>
     </resources>
 </document>
